[package]
name = "otel-example"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.37", features = ["full"] }
rand = { version = "0.8" }
anyhow = "*"

opentelemetry = "0.22.0"
opentelemetry-otlp = { version = "0.15.0" }
opentelemetry-semantic-conventions = { version = "0.15.0" }
opentelemetry-stdout = { version = "0.3.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
