[package]
name = "otel-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "*" }
hyper = { version = "0.14", features = ["full"] }
opentelemetry = { version = "0.21.0" }
opentelemetry-otlp = { version = "0.14.0" }
opentelemetry-semantic-conventions = { version = "0.15.0" }
opentelemetry_sdk = { version = "0.21.0", features = ["rt-tokio"] }
rand = { version = "0.8" }
tokio = { version = "1.37", features = ["full"] }
tracing = { version = "0.1" }
tracing-core = { version = "0.1" }
tracing-opentelemetry = { version = "0.22" }
tracing-subscriber = { version = "0.3" }
